[metadata]
name = multiconf
url = https://github.com/lhupfeldt/multiconf.git

author = Lars Hupfeldt Nielsen
author_email = lhn@hupfeldtit.dk
copyright = Copyright (c) 2012 - 2023 Lars Hupfeldt Nielsen, Hupfeldt IT

description = Python API providing a set of classes as basis for configuration objects with multiple values per attribute.
long_description = file: README.rst
long_description_content_type = text/x-rst

license = BSD

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Installation/Setup
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
include_package_data = True
install_requires =
    typing-inspect>=0.9.0

python_requires = >= 3.9

packages =
    multiconf

package_dir =
    multiconf = src

[options.extras_require]
dev =
    nox

[aliases]
test = nox
